refactor: Spring Security 설정 간소화 및 의존성 문제 해결
- 복잡한 JWT 필터 체인을 제거하고 기본 세션 인증으로 변경
- @RequiredArgsConstructor 제거하여 빈 의존성 주입 오류 해결
- 인라인 핸들러로 로그인/로그아웃 처리 간소화
- ApplicationContextConfig 추가하여 컴포넌트 스캔 범위 명시